# jonscript

./: .gitignore  CMakeLists.txt  README.md
include/: chunk.h  code.h  compiler.h  dynamic_array.h  hash_set.h  jon_parser.h  lexer.h  node.h  object.h  parser_helper.c  semantic_analyzer.h  stack.h  str_pool.h  token.h  type.h  value.h  vm.h
res/: basic_expression.jon  closure_returning.jon  copy_semantics.jon  firstbonacci.jon  function.jon  generate_trie.py  if.jon  if_with_blocks.jon  input.jon  main.jon  oop_with_closures.jon  tuple.jon  unimplemented1.jon  unimplemented2.jon  used_to_have_a_lexer_generate_trie_bug.jon  variable_declarations.jon  while.jon
res/fibonacci/: firstbonacci.jon  forbonacci.jon  fourthbonacci.jon  secondnacci.jon  thirdbonacci.jon
src/: chunk.c  code.c  compiler.c  jon_parser.c  lexer.c  main.c  node.c  object.c  semantic_analyzer.c  str_pool.c  token.c  type.c  type_io.c  value.c  vm.c
